# mgfx

./: .gitattributes  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  common.h  config.bat  glrender.cpp  glrender.h  linux_build.txt  logger.conf  main.cpp  tutorial08.cpp
GL/common/: controls.cpp  shader.cpp  text2D.cpp
app/: RENDERUI.H  renderGL.cpp  renderUI.cpp  settings.cpp  settings.h
assets/shaders/GL/: Quad.fragmentshader  Quad.vertexshader  StandardShading.fragmentshader  StandardShading.vertexshader
cmake/: copy_files.cmake  define_compiler_flags.cmake  define_platform_defaults.cmake  precomp.cmake  target_all.cmake  target_linux.cmake  target_pc.cmake
common/: common.h  fileutils.cpp  fileutils.h  mathutils.cpp  mathutils.h  timer.cpp  timer.h
graphics2d/UI/: window.cpp  window.h  windowmanager.cpp  windowmanager.h
graphics2d/imgui/: imgui_dock.inl  imgui_orient.cpp  imgui_orient.h
graphics2d/ui/: window.cpp  window.h
graphics3d/: camera.h  manipulator.h
graphics3d/GL/: glrender.cpp  glrender.h  objloader.cpp  shader.cpp  text2D.cpp  texture.cpp
graphics3d/camera/: camera.cpp  camera.h
graphics3d/device/: IDevice.h
graphics3d/device/GL/: bufferGL.cpp  bufferGL.h  deviceGL.cpp  deviceGL.h  imgui_impl_sdl_gl3.cpp  imguisdl_gl3.cpp  imguisdl_gl3.h  quadGL.cpp  quadGL.h  shader.cpp  shader.h
graphics3d/geometry/: indexer.cpp  indexer.h  mesh.cpp  mesh.h  objloader.cpp  tangentspace.cpp  tangentspace.h  vertex_spacial_sort.cpp
graphics3d/scene/: mesh.cpp  mesh.h  scene.cpp  scene.h
graphics3d/textures/: uvmap.DDS
graphics3d/ui/: manipulator.cpp  manipulator.h
host/: glrender.cpp  main.cpp
imgui/: imconfig.h  imgui.cpp  imgui_orient.cpp
